--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -114,19 +114,23 @@
                 <div>
                     <h3>MENU</h3>
                     <hr>
-                    <a href="#">Column 1 Link</a>
-                    <a href="#">Column 1 Link</a>
-                    <a href="#">Column 1 Link</a>
-                    <a href="#">Column 1 Link</a>
-                    <a href="#">Column 1 Link</a>
+                    <a href="#">Appetizers</a>
+                    <a href="#">Salads</a>
+                    <a href="#">Breakfasts</a>
+                    <a href="#">Lunch & Dinner</a>
+                    <a href="#">Desserts</a>
+                    <a href="#">Drinks</a>
                 </div>
                 <div>
                     <h3>HOURS</h3>
                     <hr>
-                    <a href="#">Column 2 Link</a>
-                    <a href="#">Column 2 Link</a>
-                    <a href="#">Column 2 Link</a>
-                    <a href="#">Column 2 Link</a>
+                    <a href="#">Monday Closed</a>
+                    <a href="#">Tuesday 11 AM – 9 PM</a>
+                    <a href="#">Wednesday 11 AM – 9 PM</a>
+                    <a href="#">Thursday  11 AM – 11 PM</a>
+                    <a href="#">Friday 11 AM – 11 PM</a>
+                    <a href="#">Saturday 11 AM – 11 PM</a>
+                    <a href="#">Sunday 11 AM – 7 PM</a>
                 </div>
                 <div>
                     <h3>CONTACT INFORMATION</h3>
@@ -154,11 +158,10 @@
                 </div>
             </div>
             <div class="footer-navbar">
-                <span>&copy; EL PAISAJE</span>
-                <a href="#">Footer Link 1</a>
-                <a href="#">Footer Link 2</a>
-                <a href="#">Footer Link 3</a>
-                <a href="#">Footer Link 4</a>
+                <span>
+                    &copy;Copyright 2024-El Paisaje. 
+                    All Rights Reserved. -Site by Ashley
+                </span>
             </div>
         </div>
     </body>
