--- a/projects/restaurant/menu-page.html
+++ b/projects/restaurant/menu-page.html
@@ -33,23 +33,77 @@
         </div>
         <div id="hero-2">
             <div id="hero-content-2">
-                <h2>Featured Dish Only $15.00</h2>
+                <h2>Featured Deal</h2>
                 <h4>
-                    Savor the Flavor with our popular
-                    Stuffed Arepas
+                    Sizzling Steak & Cheese arepa
                 </h4>
-                <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing 
-                    elit. Impedit, totam veniam optio porro neque ipsum ea 
-                    exercitationem voluptate. Qui ullam corporis sit 
-                    assumenda consequatur optio libero ipsam ex deserunt 
-                    dolore.
-                </p>
+                <h3>
+                    Golden, crispy arepa stuffed with succulent, spiced steak 
+                    and gooey, melted cheese. A perfect blend of savory flavors 
+                    in every bite.
+                </h3>
+                <h5>Only 10.99</h5>
                 <div>
                     <a href="menu-page.html">ORDER NOW</a>
                 </div>
             </div>
         </div>
         <div class="spacer"></div>
+        <div id="centered-column">
+            <div class="card">
+                <img
+                    src="images/bandeja.webp"
+                    alt="Bandeja Paisaje"
+                >
+                <h2>Bandeja Paisaje</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Facere ratione laudantium quos, aliquam nesciunt tempore 
+                    eveniet.
+                </p>
+                <p</p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="card">
+                <img
+                    src="images/eyeshadow.jpg"
+                    alt="a makeup powder product"
+                >
+                <h2>Makeup Product</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Facere ratione laudantium quos, aliquam nesciunt tempore 
+                    eveniet.
+                </p>
+                <a href="#">Learn More</a>
+            </div>
+           <div class="card">
+                 <img
+                    src="images/lipstick.jpg"
+                    alt="a makeup powder product"
+                >
+                <h2>Makeup Product</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    Facere ratione laudantium quos, aliquam nesciunt tempore 
+                    eveniet. Lorem ipsum dolor sit amet consectetur adipisicing 
+                    elit. Facere ratione laudantium quos, aliquam nesciunt tempore.
+                </p>
+                <a href="#">Learn More</a>
+            </div>
+            <div class="card">
+                <img
+                   src="images/concealer.jpg"
+                   alt="a makeup powder product"
+               >
+               <h2>Makeup Product</h2>
+               <p>
+                   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                   Facere ratione laudantium quos, aliquam nesciunt tempore 
+                   eveniet.
+               </p>
+               <a href="#">Learn More</a>
+           </div>
+        </div>
     </body>
 </html>
