--- a/projects/restaurant/index.html
+++ b/projects/restaurant/index.html
@@ -32,7 +32,7 @@
                 </div>
             </div>
         </div>
-            <div id="hero-1">
+            <div class="heros" id="hero-1">
                 <div class="hero-content">
                     <h2>Try Out Our Traditional Cuisine </h2>
                     <h4>
