--- a/projects/restaurant/menu-page.html
+++ b/projects/restaurant/menu-page.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <div id="hero-2">
+        <div class="heros" id="hero-2">
             <div id="hero-content-2">
                 <h2>Featured Deal</h2>
                 <h4>
@@ -49,61 +49,162 @@
             </div>
         </div>
         <div class="spacer"></div>
-        <div id="centered-column">
-            <div class="card">
+        <div class="grid-container three-columns">
+            <div class="list ">
+                <img
+                    src="images/Colombian-Buñuelos-Recipe.jpg"
+                    alt="buñuelos"
+                >
+                <h2>Traditional Buñuelos</h2>
+                </p>
+                <p>$6.99</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+            <div class="list">
+                <img
+                    src="images/Empanadas.jpg"
+                    alt="empanadas"
+                >
+                <h2>Empanadas de res</h2>
+                </p>
+                <p>$8.00</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+            <div class="list">
+                <img
+                    src="images/beefbarbacoatacostopstacked.jpg"
+                    alt="Beef tacos"
+                >
+                <h2>barbacoa beef tacos</h2>
+                </p>
+                <p>$5.99</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+            <div class="list">
+                <img
+                    src="images/colombian-arepa-sandwich.webp"
+                    alt="arepa sandwich"
+                >
+                <h2>Arepas rellenas</h2>
+                </p>
+                <p>$9.00</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+            <div class="list">
                 <img
                     src="images/bandeja.webp"
                     alt="Bandeja Paisaje"
                 >
                 <h2>Bandeja Paisaje</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Facere ratione laudantium quos, aliquam nesciunt tempore 
-                    eveniet.
                 </p>
-                <p</p>
-                <a href="#">Learn More</a>
+                <p>$15.59</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
             </div>
-            <div class="card">
+            <div class="list">
                 <img
-                    src="images/eyeshadow.jpg"
-                    alt="a makeup powder product"
+                    src="images/colombian_sancocho.jpeg"
+                    alt="sancocho"
                 >
-                <h2>Makeup Product</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Facere ratione laudantium quos, aliquam nesciunt tempore 
-                    eveniet.
+                <h2>Traditional sancocho</h2>
                 </p>
-                <a href="#">Learn More</a>
+                <p>$10.99</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
             </div>
-           <div class="card">
-                 <img
-                    src="images/lipstick.jpg"
-                    alt="a makeup powder product"
-                >
-                <h2>Makeup Product</h2>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                    Facere ratione laudantium quos, aliquam nesciunt tempore 
-                    eveniet. Lorem ipsum dolor sit amet consectetur adipisicing 
-                    elit. Facere ratione laudantium quos, aliquam nesciunt tempore.
-                </p>
-                <a href="#">Learn More</a>
-            </div>
-            <div class="card">
+            <div class="list">
                 <img
-                   src="images/concealer.jpg"
-                   alt="a makeup powder product"
-               >
-               <h2>Makeup Product</h2>
-               <p>
-                   Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-                   Facere ratione laudantium quos, aliquam nesciunt tempore 
-                   eveniet.
-               </p>
-               <a href="#">Learn More</a>
-           </div>
+                    src="images/hamburger.jpg"
+                    alt="Bandeja Paisaje"
+                >
+                <h2>Colombian Hamburger</h2>
+                </p>
+                <p>$13.00</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+            <div class="list">
+                <img
+                    src="images/chocoflan.jpg"
+                    alt="chocoflan"
+                >
+                <h2>Gran Pastel Imposible</h2>
+                </p>
+                <p>$30.00</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+            <div class="list">
+                <img
+                    src="images/cinnamon-churro-icecream.jpg"
+                    alt="Churro icecream"
+                >
+                <h2>Churro Icecream</h2>
+                </p>
+                <p>$10.99</p>
+                <a href="#">Description</a>
+                <a href="#">Order Now</a>
+            </div>
+	    </div>
+        <div class="spacer"></div>
+        <div class="footer">
+            <div class="footer-columns-navbar">
+                <div>
+                    <h3>MENU</h3>
+                    <hr>
+                    <a href="#">Appetizers</a>
+                    <a href="#">Salads</a>
+                    <a href="#">Breakfasts</a>
+                    <a href="#">Lunch & Dinner</a>
+                    <a href="#">Desserts</a>
+                    <a href="#">Drinks</a>
+                </div>
+                <div>
+                    <h3>HOURS</h3>
+                    <hr>
+                    <a href="#">Monday Closed</a>
+                    <a href="#">Tuesday 11 AM – 9 PM</a>
+                    <a href="#">Wednesday 11 AM – 9 PM</a>
+                    <a href="#">Thursday  11 AM – 11 PM</a>
+                    <a href="#">Friday 11 AM – 11 PM</a>
+                    <a href="#">Saturday 11 AM – 11 PM</a>
+                    <a href="#">Sunday 11 AM – 7 PM</a>
+                </div>
+                <div>
+                    <h3>CONTACT INFORMATION</h3>
+                    <hr>
+                    <a href="#">
+                        Address
+                        XXX Lorem St,<br>
+                        Lowell, MA 01850
+                    </a>
+                    <a href="#">
+                        Phone <br>
+                        (978) 000-0000
+                    </a>
+                    <a>
+                        Email<br>
+                        Paisaje@ElPaisaje.com
+                    </a>
+                </div>
+                <div>
+                    <h3>FOLLOW US</h3>
+                    <hr>
+                    <i class="fa-brands fa-instagram"></i>
+                    <i class="fa-brands fa-facebook"></i>
+                    <img src="images/BT-paisaje.jpg">
+                </div>
+            </div>
+            <div class="footer-navbar">
+                <span>
+                    &copy;Copyright 2024-El Paisaje. 
+                    All Rights Reserved. -Site by Ashley
+                </span>
+            </div>
         </div>
     </body>
 </html>
